Fix elements wrapping

--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -54,13 +54,11 @@
 
 @media only screen and (min-width: 768px) {
     .games-wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding-bottom: 40px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+        gap: 15px;
         .search-game-card {
-            width: 30%;
-            margin: 0 auto;
+            margin: 10px;
         }
 
     }
